--- a/index.html
+++ b/index.html
@@ -201,6 +201,43 @@
             <button type="button" class="active">Recent</button>
             <button type="button" class="active">Upcoming</button>
         </div>
+
+    <div class="row grid">
+        <div class="col-lg-4 col-md-6 col-sm-12 element-item all">
+            <div class="our-project">
+                <div class="img">
+                    <img src="img/dashboarrd.jpg" alt="dashboard image">
+                </div>
+                <div class="title py-4">
+                    <h4 class="text-uppercase">Dashboard</h4>
+                    <span class="text-secondary">All,Dashboard</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
+            <div class="our-project">
+                <div class="img">
+                    <img src="img/delivery.jpg" alt="delivery-website image">
+                </div>
+                <div class="title py-4">
+                    <h4 class="text-uppercase">Food Delivery</h4>
+                    <span class="text-secondary">Recent,Food Delivery</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
+            <div class="our-project">
+                <div class="img">
+                    <img src="img/laundry.jpg" alt="laundry-website image">
+                </div>
+                <div class="title py-4">
+                    <h4 class="text-uppercase">Laundry</h4>
+                    <span class="text-secondary">Upcoming, Laundry</span>
+                </div>
+            </div>
+        </div>
+
+    </div>
     </section>
 
 </main>
